--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -10,7 +10,7 @@
     <%= image_tag course.image.to_s, class: 'img-fluid' %>
     <br />
     <div class="row">
-      <div class="col-12 col-sm-8">
+      <div class="col-12 col-sm-8 dashboard-description">
         <%= course.description %>
       </div>
       <div class="col-12 col-sm-4 text-center">
