--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,7 +4,7 @@
     <br />
     <h1>Learn Magic from the Pros</h1>
     <br />
-    <h2>Yer a wizard, Harry</h2>
+    <h2>Get started today</h2>
     <br />
     <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     <br /><br />
